--- a/second_project/templates/second_app/help.html
+++ b/second_project/templates/second_app/help.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Help Page</title>
-</head>
-<body>
-    <h1>{{ please_insert_me_here }}</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>HELP PAGE</title>
+  </head>
+  <body>
+    {{ help_insert }}
+
+  </body>
 </html>
